# mycobot_ws

./: .gitignore  README.md
src/apriltag_ros/: CMakeLists.txt  package.xml
src/apriltag_ros/cfg/: tags_36h11.yaml  tags_41h12.yaml
src/apriltag_ros/launch/: direct_camera_36h11.launch.py
src/apriltag_ros/src/: AprilTagNode.cpp  pose_estimation.cpp
src/jetcobot_ros2/: .gitignore
src/jetcobot_ros2/jetcobot_bringup/: package.xml  setup.cfg  setup.py
src/jetcobot_ros2/jetcobot_bringup/config/: camera_info_publisher.yaml  jetcocam_1_calib.yaml  jetcocam_2_calib.yaml  ov3360_1_calib.yaml  ov3360_2_calib.yaml  ov3360_3_calib.yaml
src/jetcobot_ros2/jetcobot_bringup/jetcobot_bringup/: camera_info_publisher.py  joint_control.py  joint_state_switcher.py
src/jetcobot_ros2/jetcobot_bringup/launch/: bringup.launch.py  camera_info_publisher.launch.py  pinky_tf_publisher.launch.py
src/jetcobot_ros2/jetcobot_description/: CMakeLists.txt  package.xml
src/jetcobot_ros2/jetcobot_description/launch/: display.launch.py
src/jetcobot_ros2/jetcobot_description/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL  camera_Link.STL  jiazhua_Link.STL
src/jetcobot_ros2/jetcobot_description/urdf/: jetcobot.urdf  jetcobot_display.urdf  jetcobot_display_fixed.urdf
src/jetcobot_ros2/jetcobot_interfaces/: CMakeLists.txt  package.xml
src/jetcobot_ros2/jetcobot_interfaces/action/: PickerAction.action
src/jetcobot_ros2/jetcobot_interfaces/msg/: TaskSimple.msg
src/jetcobot_ros2/jetcobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jetcobot_ros2/jetcobot_moveit_config/config/: initial_positions.yaml  jetcobot.ros2_control.xacro  jetcobot.srdf  jetcobot.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/jetcobot_ros2/jetcobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/jetcobot_ros2/jetcobot_moveit_picker/: CMakeLists.txt  GUI_README.md  package.xml
src/jetcobot_ros2/jetcobot_moveit_picker/config/: motion_planning_python.yaml  mover.rviz
src/jetcobot_ros2/jetcobot_moveit_picker/include/jetcobot_moveit_picker/: tag_picker.hpp
src/jetcobot_ros2/jetcobot_moveit_picker/jetcobot_moveit_picker/: moveit_picker.py
src/jetcobot_ros2/jetcobot_moveit_picker/launch/: loadpoint_publisher.launch.py  moveit_mover.launch.py  pick_and_place.launch.py  picker_gui.launch.py
src/jetcobot_ros2/jetcobot_moveit_picker/scripts/: moveit_mover.py  picker_gui.py  task_status.py
src/jetcobot_ros2/jetcobot_moveit_picker/src/: planning_scene.cpp  tag_picker copy.cpp  tag_picker.cpp
src/jetcobot_ros2/pinky_description/: CMakeLists.txt  package.xml
src/jetcobot_ros2/pinky_description/launch/: display.launch.xml  upload.launch.xml
src/jetcobot_ros2/pinky_description/meshes/collision/: base_link.stl  base_link_old.stl  camera.stl  caster.stl  lidar.stl  ul_sensor.stl  wheel.stl
src/jetcobot_ros2/pinky_description/meshes/visual/: base_link.dae  camera.dae  caster.dae  lidar.dae  pinky_bag.stl  ul_sensor.dae  wheel.dae
src/jetcobot_ros2/pinky_description/rviz/: urdf_config.rviz
src/jetcobot_ros2/pinky_description/urdf/: camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_gazebo.xacro
